<resources>
    <string name="app_name">Pekla Tour</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tour_favorite">Destinasi Paling Sering Dikunjungi</string>
    <string name="maaf_data_tour_masih_kosong">Maaf Untuk Saat Ini Kami Belum Ada Membuka Tour Ini</string>
    <string name="pilih_tour_mu">Pilih Tour Mu</string>
    <string name="awal">Awal</string>
    <string name="pesanan">Pesanan</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="masuk">MASUK</string>
    <string name="daftar">DAFTAR</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar_sekarang">DAFTAR SEKARANG</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="durasi_tour">Durasi Tour</string>
    <string name="tujuan_tour">Tujuan Tour</string>
    <string name="tanggal_berangkat">Tanggal Berangkat</string>
    <string name="penumpang">Penumpang</string>
    <string name="biaya_tour">Biaya Tour</string>
    <string name="termasuk_dalam_tour">Termasuk Dalam Tour</string>
    <string name="tidak_termasuk_dalam_tour">Tidak Termasuk Dalam Tour</string>
    <string name="pesan">PESAN</string>
    <string name="rute_perjalanan">Rute Perjalanan</string>
    <string name="tambahkan_banyak_penumpang">Tambahkan Banyak Penumpang</string>
    <string name="batal">Batal</string>
    <string name="pilih">Pilih</string>
    <string name="pilih_tanggal_keberangkatan">Pilih Tanggal Keberangkatan</string>
    <string name="pilih_banyak_penumpang">Pilih Banyak Penumpang</string>
    <string name="message_login">Anda melakukan pemesanan Anda harus melakukan Masuk terlebih dahulu. Jika Anda belum
        mempunyai Akun silahkan Daftar terlebih dahulu
    </string>
    <string name="nama">Nama</string>
    <string name="keluar">Keluar</string>
    <string name="message_pemesanan">Anda Belum Ada Melakukan Pemesanan</string>
    <string name="no_pesanan">No. Pesanan %1$s</string>
    <string name="rp">Rp %1$s</string>
    <string name="nopesanan">No Pesanan\n%1$s</string>
    <string name="biayatour">Biaya Tour\nRp %1$s</string>
    <string name="jumlahpenumpang">Jumlah Penumpang\n%1$s</string>
    <string name="durasitour">Durasi Tour\n%1$s</string>
    <string name="testing">testing\nayo</string>
    <string name="keluar_dari_akun_anda">Keluar dari akun anda</string>
    <string name="message_show_order_not_login">Untuk melihat Pesanan Anda Harus Login Dulu</string>
    <string name="message_please_wait_order">Mohon Menunggu, kami masih melakukan proses pesanan Anda</string>
    <string name="message_not_process_order">Mohon Maaf, kami belum bisa melakukan proses pesanan Anda</string>
    <string name="order_no">No Pesanan</string>
    <string name="tour_fee">Biaya Tour</string>
    <string name="total_passenger">Jumlah Penumpang</string>
    <string name="tour_duration">Durasi Tour</string>
    <string name="login_pekla_tour">Masuk Pekla Tour</string>
    <string name="ticket_tour">Tiket Tour</string>
    <string name="retry">Ulangi</string>
    <string name="message_empty_list_tour">Maaf untuk saat ini belum ada Tour dengan tipe %s ini, Anda bisa coba yang lain</string>
    <string name="list_tour">Daftar Tour</string>
    <string name="venue_infomation">Informasi Tempat</string>
    <string name="book_tour">Pesan Tour</string>
    <string name="guests">Banyak Tamu</string>
    <string name="total_people">%1$s - %2$s Orang</string>
    <string name="day">Hari</string>
    <string name="detail_tour">Detail Tour</string>
    <string name="developer_info">Developer Info</string>
</resources>
