<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.pesantour.PesanTourActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:clipToPadding="false">

        <TextView
                style="@style/TextViewTitle"
                android:text="@string/tujuan_tour"/>

        <TextView
                android:id="@+id/tv_tujuan_tour"
                style="@style/TextViewSubTitle"
                android:text="@string/app_name"/>

        <View style="@style/view"/>

        <TextView
                style="@style/TextViewTitle"
                android:text="@string/durasi_tour"/>

        <TextView
                android:id="@+id/tv_durasi_tour"
                style="@style/TextViewSubTitle"
                android:text="@string/app_name"/>

        <View style="@style/view"/>

        <TextView
                style="@style/TextViewTitle"
                android:text="@string/biaya_tour"/>

        <TextView
                android:id="@+id/tv_biaya_tour"
                style="@style/TextViewSubTitle"
                android:text="@string/app_name"/>

        <View style="@style/view"/>

        <LinearLayout
                android:id="@+id/ll_tanggal_berangkat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    style="@style/TextViewTitle"
                    android:text="@string/tanggal_berangkat"/>

            <TextView
                    android:id="@+id/tv_tanggal_berangkat"
                    style="@style/TextViewSubTitle"
                    android:text="@string/pilih_tanggal_keberangkatan"/>
        </LinearLayout>

        <View style="@style/view"/>

        <LinearLayout
                android:id="@+id/ll_penumpang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    style="@style/TextViewTitle"
                    android:text="@string/penumpang"/>

            <TextView
                    android:id="@+id/tv_penumpang"
                    style="@style/TextViewSubTitle"
                    android:text="@string/pilih_banyak_penumpang"/>
        </LinearLayout>

        <View style="@style/view"/>

        <TextView
                style="@style/TextViewTitle"
                android:text="@string/rute_perjalanan"/>

        <TextView
                android:id="@+id/tv_rute_perjalanan"
                style="@style/TextViewSubTitle"
                android:text="@string/app_name"/>

        <View style="@style/view"/>

        <TextView
                style="@style/TextViewTitle"
                android:text="@string/termasuk_dalam_tour"/>

        <TextView
                android:id="@+id/tv_termasuk_dalam_tour"
                style="@style/TextViewSubTitle"
                android:text="@string/app_name"/>

        <View style="@style/view"/>

        <TextView
                style="@style/TextViewTitle"
                android:text="@string/tidak_termasuk_dalam_tour"/>

        <TextView
                android:id="@+id/tv_tidak_termasuk_dalam_tour"
                style="@style/TextViewSubTitle"
                android:text="@string/app_name"/>

        <View style="@style/view"/>

        <Button
                android:id="@+id/btn_pesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pesan"
                android:background="@drawable/button_primary"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>