<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#878787">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/tambahkan_banyak_penumpang"/>
    </LinearLayout>
    <com.super_rabbit.wheel_picker.WheelPicker
            android:id="@+id/numberPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
        <Button
                android:id="@+id/btn_batal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/button_white"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/batal"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="3dp"/>
        <Button
                android:id="@+id/btn_pilih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/button_primary"
                android:text="@string/pilih"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="3dp"/>

    </LinearLayout>

</LinearLayout>
