<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.tikettour.TiketTourActivity">

    <com.mreram.ticketview.TicketView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tv_anchor1="@+id/ll_head"
            app:tv_anchor2="@+id/ll_center"
            app:tv_circleSpace="15dp"
            app:tv_dashSize="1.5dp"
            android:layout_margin="20dp"
            app:tv_dashColor="@color/colorPrimary"
            app:tv_circleRadius="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/ll_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:background="@drawable/button_primary"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/tv_no_pesanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/testing"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:layout_weight="1"/>

                <TextView
                        android:id="@+id/tv_biaya_tour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/testing"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="20dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tv_tujuan_tour"
                        style="@style/TextViewTitle"
                        android:layout_marginBottom="10dp"
                        android:text="@string/pesanan"
                        android:gravity="center"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@android:color/darker_gray"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:id="@+id/tv_jumlah_penumpang"
                            style="@style/TextViewSubTitle"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/testing"/>
                    <TextView
                            android:id="@+id/tv_durasi_tour"
                            style="@style/TextViewSubTitle"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/testing"/>
                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@android:color/darker_gray"/>


                <ImageView
                        android:id="@+id/iv_qr_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@drawable/button_darker_gray">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:text="@string/app_name"/>
            </LinearLayout>
        </LinearLayout>
    </com.mreram.ticketview.TicketView>
</FrameLayout>